# carbontracker-redone

./: .env  .gitignore  design.md  example.ipynb  example.py  main.py  pyproject.toml  readme.md  test_forecast_api.py  test_tracker.py
carbontracker_logs/: run_1779884224_events.jsonl  run_1779884308_events.jsonl  run_1779893842_events.jsonl  run_1779893906_events.jsonl  run_1779895028_events.jsonl  run_1779896999_events.jsonl  run_1779897040_events.jsonl  run_1780037168_events.jsonl
logs/: legacy_run_events.jsonl
src/: __init__.py  tracker.py
src/carbontracker/: __init__.py
src/carbontracker/config/: config.py  config_manager.py  project_init.py
src/carbontracker/core/: aggregator.py  emissions_calculations.py  engine.py  event_codec.py  events.py  exceptions.py  execution_guard.py  markers.py  prediction.py  profiling.py  spans.py  (+5 more)
src/config/: compiler.py  config.py  config_manager.py  default_config.py
src/core/: aggregator.py  aggregator_thread.py  config.py  emissions_calculations.py  engine.py  event_observer.py  events.py  exceptions.py  execution_guard.py  file_logger_thread.py  handler_thread.py  logging.py  markers.py  prediction.py  resolution.py  session.py  stats.py  terminal_output_thread.py  tracker_thread.py  types.py  utils.py  writer_thread.py
src/data_provider/: data_provider.py  data_provider_thread.py  factory.py
src/observer/: __init__.py  base.py  factory.py
src/observers/: base.py  factory.py
src/providers/: base.py  data_provider_thread.py  factory.py
src/reporters/: file_logger.py  logging_handler.py  terminal.py
test/: cli_carbontracker.py  test_event_codec.py  test_intensity_fallback.py  test_project_config.py  test_runtime_refactor.py  test_span_power_profiler.py  test_subprocess_events.py
test/fixtures/: replay_session_events.jsonl
test_logs/: test_events.jsonl
(+78 files in other folders)
