[project]
name = "carbontrackerv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.workspace]
members = ["carbontracker"]

[project.scripts]
carbontracker = "src.entrypoints.cli.cli:main"
[tool.pytest.ini_options]
pythonpath = ["."]
