[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbontrackerv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2,<3",
    "tomli>=2; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
gpu = [
    "nvidia-ml-py>=12,<14",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.workspace]
members = ["carbontracker"]

[project.scripts]
carbontracker = "carbontracker.entrypoints.cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carbontracker"]
[tool.pytest.ini_options]
pythonpath = ["src"]
